add subdirectory and target-link for host-source-code

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(Test_TMP)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 11)
 
 include(../cmake/select_backend.cmake)
 include(../cmake/select_build_mode.cmake)
@@ -15,6 +15,7 @@ include_directories(
 add_subdirectory(algorithms)
 add_subdirectory(containers)
 add_subdirectory(routines)
+add_subdirectory(../source build)
 
 add_executable(gtest_all gtest_main.cpp)
 
@@ -23,4 +24,5 @@ target_link_libraries(gtest_all
     testcontainers
     testalgorithms
     testroutines
+    host_source_code
 )
