Update build process to choose if to build tests and to enable build for different backends - currently Serial and OpenMP

--- a/cmake/PPTConfig.cmake.in
+++ b/cmake/PPTConfig.cmake.in
@@ -5,7 +5,7 @@ list(APPEND CMAKE_MODULE_PATH ${PPT_CMAKE_DIR})
 list(REMOVE_AT CMAKE_MODULE_PATH -1)
 
 if(NOT TARGET PPT_CMAKE_DIR::PPT_CMAKE_DIR)
-    include("${PPT_CMAKE_DIR_CMAKE_DIR}/PPTTargets.cmake")
+    include("${PPT_CMAKE_DIR}/PPTTargets.cmake")
 endif()
 
 set(PPT_LIBRARIES PPT_CMAKE_DIR::PPT_CMAKE_DIR)
