--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,11 +5,11 @@ find_package(GTest REQUIRED)
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(PPT_TEST_SOURCES)
-append_glob(PPT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/algorithms/*.cpp)
-append_glob(PPT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/containers/*.cpp)
-append_glob(PPT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/routines/*.cpp)
+append_glob(PPT_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/algorithms/*.cpp)
+append_glob(PPT_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/containers/*.cpp)
+append_glob(PPT_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/routines/*.cpp)
 
-add_executable(PPT_test gtest_main.cpp ${PPT_SOURCES})
+add_executable(PPT_test gtest_main.cpp ${PPT_TEST_SOURCES})
 
 target_compile_options(
   PPT_test PRIVATE $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:
