--- a/cmake/pptConfig.cmake.in
+++ b/cmake/pptConfig.cmake.in
@@ -8,8 +8,19 @@ if(@PPT_ENABLE_OPENMP@)
   find_package(OpenMP REQUIRED)
 endif()
 
+if(@PPT_ENABLE_CUDA@)
+  enable_language(CUDA)
+  find_package(CUDAToolkit REQUIRED)
+  set(CMAKE_CUDA_ARCHITECTURES "52;60;61;62;70;72;80;86")
+  set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
+  set(CMAKE_CUDA_RUNTIME_LIBRARY Static)
+endif()
+
 if(NOT TARGET PPT_CMAKE_DIR::PPT_CMAKE_DIR)
     include("${PPT_CMAKE_DIR}/pptTargets.cmake")
 endif()
 
 set(PPT_LIBRARIES PPT_CMAKE_DIR::PPT_CMAKE_DIR)
+set(PPT_ENABLE_OPENMP @PPT_ENABLE_OPENMP@)
+set(PPT_ENABLE_CUDA @PPT_ENABLE_CUDA@)
+set(PPT_ENABLE_HIP @PPT_ENABLE_HIP@)
