--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,11 +9,11 @@ append_glob(PPT_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/algorithms/*.cpp)
 append_glob(PPT_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/containers/*.cpp)
 append_glob(PPT_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/routines/*.cpp)
 
-add_executable(PPT_test gtest_main.cpp ${PPT_TEST_SOURCES})
+add_executable(ppt_test gtest_main.cpp ${PPT_TEST_SOURCES})
 
 target_compile_options(
-  PPT_test PRIVATE $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:
+  ppt_test PRIVATE $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:
                    -Wall -Wextra -Wpedantic>)
-target_compile_features(PPT_test PRIVATE cxx_std_11)
+target_compile_features(ppt_test PUBLIC cxx_std_11)
 
-target_link_libraries(PPT_test GTest::gtest_main PPT::ppt)
+target_link_libraries(ppt_test GTest::gtest_main PPT::ppt)
